--- a/style.css
+++ b/style.css
@@ -407,7 +407,7 @@ color: #666;
     .container4 h1 {
         font-size: 22px;
         text-align: center;
-        margin-left: 30px;
+        margin-right: 30px;
     }
 
     .card h3 {
